--- a/index.html
+++ b/index.html
@@ -5,19 +5,70 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/refreshstyle.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Random gradient</title>
 </head>
 
 <body>
 	<div class="container">
-		<div class="description">
-			<h1>The hex code of the color is # <span id="hex-code">00000</span></h1>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
 		</div>
-		<div>
-			<button onclick="changeGradient()" type="button" class="btn btn-warning btn-lg">Random
-				gradient</button>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element center_container" id="">
+			<div class="description" id="">
+				<h1>Find gradient for your need</h1>
+				<p>Click on button to generate new gradients</p>
+				<p>Click on gradient you like to copy</p>
+			</div>
+			<div class="gradient_button" id="">
+				<button id="gButton" onclick="changeGradient()">Generate</button>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
+		</div>
+		<div class="flex_element" id="">
+			<div class="gradient_window" id=""></div>
+			<div class="gradient_info" id="">
+				<p>Copied!</p>
+			</div>
 		</div>
 	</div>
 	<script src="script.js"></script>
